<resources>
    <string name="app_name">Job Scheduler</string>
    <string name="network_type_required">Network Type Required</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="device_idle">Device idle</string>
    <string name="device_charging">Device charging</string>
    <string name="requires">Requires:</string>
    <string name="override_deadline">Override deadline:</string>
    <string name="not_set">Not set</string>
    <string name="seekBar_notSet">Not set</string>
</resources>