<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_type_required"
        android:layout_margin="4dp"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <RadioButton
            android:id="@+id/noNetwork"
            android:text="@string/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/anyNetwork"
            android:text="@string/any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/wifiNetwork"
            android:text="@string/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scheduleJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:text="@string/schedule_job"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_job"
        android:onClick="cancelJob"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requires"
        android:layout_margin="4dp"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/idleSwitch"
            android:text="@string/device_idle"
            android:layout_width="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/chargingSwitch"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_height="wrap_content"
            android:text="@string/device_charging"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/seekBarLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginRight="2dp"
            android:text="@string/override_deadline"/>

        <TextView
            android:id="@+id/seekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not set"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>




</LinearLayout>